--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-background-color: #49207e;
+background-color: #025e16;
 color: white;
 font-family: "Bai Jamjuree", sans-serif;
 display: flex;
@@ -10,7 +10,7 @@ margin: 0;
 }
 
 button {
-background-color: #0d9701;
+background-color: #5a027c;
 color: white;
 font-family: "Bai Jamjuree", sans-serif;
 }
